--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,14 @@ test:
   timeout: 5000
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   pool: 5
-  timeout: 5000
+  database: news_dev
+  username: root
+  password: root
+
 
 production:
   adapter: mysql2
